# factli

./: .gitignore  Pipfile  README.md  pyproject.toml  ts(list_id, access_token, count):
Facebook/: Pipfile  get_list.py  get_posts.py  number_of_posts.py  setup.py
Faceboook/: get_list.py
Twitter/: README.md
factli/: factli.py  get_leaderboard.py  get_list.py  get_lists.R  get_posts.py
test/: test_posts.py  test_retrieve_CT_subscriberCount.py
tests/: test_general.py  test_retrieve_CT_subscriberCount.py
